--- a/Pages/intro-page.html
+++ b/Pages/intro-page.html
@@ -37,7 +37,24 @@
             men allt eftersom tiden går, lär jag mig mer om mig själv och hur jag ska hantera tuffa situationer. <br>
             Det går inte alltid framåt men med den fantastiska hjälp jag har från min familj ska det nog gå bra.
         </p>
-        <!--3.p är elementet för paragraf och identifierar en grupp meningar.-->
+<!--3.p är elementet för paragraf och identifierar en grupp meningar.-->
+        <!--8.table identifierar att det är en tabell. Tr står för table row och td står för table data.-->
+        <!--Caption ger tabellen en rubrik och th ger tabell raden sin egna rubrik-->
+        <table>
+            <caption>Snabbfakta</caption>
+            <tr>
+                <th>Namn</th>
+                <td>Hanna Hållinder</td>
+            </tr>
+            <tr>
+                <th>Ålder</th>
+                <td>26 år</td>
+            </tr>
+            <tr>
+                <th>Födelsedag</th>
+                <td>3:e September</td>
+        </table>
+        
         <!--Slut på intro-->
     
         <!--Början på huvud text-->
