--- a/Pages/analys.html
+++ b/Pages/analys.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Analys av ICA.se</h1>
         <p>
-            Jag harJag har valt att analysera <a href="https://www.ica.se/">ICA.se</a> 
+            Jag har valt att analysera <a href="https://www.ica.se/">ICA.se</a> 
             då det är en stor matkedja som sträcker sig över hela Sverige och är även en stor del i min egen vardag.
             Jag var intresserad av att se hur en sådan stor och väl etablerad organisation har hängt med in i den digitala eran. 
         </p>
@@ -18,23 +18,24 @@
             Syftet med ICA.se är att marknadsföra och sälja de varor och tjänster som märket förser, 
             samt ge förtroende till användaren att tjänsterna och varorna är billiga och av hög kvalitet. 
             I &lt;title&gt; utrymmet kan man läsa <q>Din matbutik för en prisvärd och enklare vardag</q>
+            <a href="#I"><sup>I</sup></a> 
             En tydlig slogan som klart berättar vad Ica vill utstråla till sina kunder. 
             Ingångssidan visar tydliga rubriker med förslag på recept samt erbjudanden som butiker nära dig har just nu. 
             Erbjudandena ändras varje vecka och recepten på ingångssidan roteras beroende på säsong. 
         </p>
-
+        <!--Slut på Syfte-->
         <h2>Målgrupp</h2>
         <p>
-            ICA.se är uppbyggd på ett uppgift eller mål systemi inriktat till Icas kunder, 
+            ICA.se är uppbyggd på ett uppgift eller mål system<a href="#II"><sup>II</sup></a> inriktat till Icas kunder, 
             med rubriker som ”<i>Handla online</i>”, ”<i>Recept</i>” och ”<i>Kundservice</i>”. 
             Webbplatsen är inriktad mot de redan existerande kunderna och erbjuder lätt åtkomst till information gällande specifika butiker 
             så användaren kan få kundtjänst och rabatter från deras lokala butik. 
         </p>
-
+        <!--Slut på Målgrupp-->
         <h2>Navigering</h2>
         <p>
             Webbplatsen börjar med en tydlig navigering där det enkelt går att komma åt den globala menyn vart man än rör sig på sidan. 
-            Ett sökfönster finns högst upp till höger och en hjälpmeny längst ned på sidan.
+            Ett sökfönster finns högst upp till höger och en hjälpmeny längst ned på sidan<a href=#III><sup>III</sup></a>.
             Webbsidan erbjöd även en synlig sökväg och jag blev genast nyfiken på hur webbplatsen hanterade en invecklad och potentiellt korsande väg. 
             Skulle alla länkar jag passerat visats? Speciellt ifall jag lyckades vända tillbaka till samma sida genom en annan väg. 
         </p>
@@ -52,11 +53,12 @@
             Men så fort jag väljer en ingrediens, försvinner alla länkarna och det som finns kvar är, <i>Startsida – Recept</i>. 
             <br>
             För att hitta min väg tillbaka kan jag såklart använda bakåtknappen, 
-            men jag finner ändringen i länk historiken ganska oförutsägbar och ostrukturerad
+            men jag finner ändringen i länk historiken ganska oförutsägbar och ostrukturerad<a href="#IV"><sup>IV</sup></a>.
         </p>
         <p>
             <aside>
-            Jag skulle vilja tillägga att det var först <b>efter</b> jag gjorde detta experiment som jag tittade under ”Synlig sökväg (brödsmulor)” i 
+            Jag skulle vilja tillägga att det var först <b>efter</b> jag gjorde detta experiment som jag tittade under <q>Synlig sökväg &lpar;brödsmulor&rpar;</q>
+            <a href="#V"><sup>V</sup></a>
             Användbarhetsboken och lärde mig att det är som vanligast att en synlig sökväg endast visar den närmaste vägen från ingångssidan till den sida man befinner sig på. 
             Detta får mig dock att undra, när är det bäst att visa den närmaste vägen och när är det bäst att inte ändra tillbakavägen? 
             Jag står kvar vid min slutsats att de oförutsägbara ändringarna till sökvägen gör det svårt att navigera sig tillbaka samma väg som man kom, 
@@ -71,10 +73,11 @@
             Rubriken för sidan säger <i>Catering</i> även fast designen är densamma som för <i>Butiker</i>. 
             Den enda märkbara skillnaden jag kan se förutom underrubriken är att ett filter har förvalts för att visa vilka butiker som erbjuder catering.
         </p>
+        <!--Slut på Navigering-->
 
         <h2>Bilder</h2>
         <p>
-            Webbplatsen använder sig flitigt av bilder för att skapa en upplyftande stämning som gör det lättare att ta till sig de olika rubrikerna och tjänsterna. 
+            Webbplatsen använder sig flitigt av bilder för att skapa en upplyftande stämning<a href="#VI"><sup>VI</sup></a> som gör det lättare att ta till sig de olika rubrikerna och tjänsterna. 
             Med professionellt tagna bilder av mat väcker det användarens hunger och nyfikenhet på nya smaker som de kan uppleva genom att handla Icas varor. 
             Jag tycker att det är väldigt smart hur de har används sig av bilder i just recept och inspirations delen. 
             Det är mycket lättare att bli sugen på en maträtt om man ser visuell representation av den och inte bara en massa text. 
@@ -84,10 +87,11 @@
             Med bilder ser användaren klart och tydligt vilken vara som är rabatterad, 
             utan att sidan behöver skriva den oändligt långa produktbeskrivningen som ofta behövs för att specificera en vara om det inte fanns bilder. 
         </p>
+        <!--Slut på Bilder-->
 
         <h2>Tillgänglighet</h2>
         <p>
-            Enligt Ica själva utgår de ifrån EN 301549 och WCAG 2.1 nivå A och AA. 
+            Enligt Ica själva utgår de ifrån EN 301549 och WCAG 2.1 nivå A och AA<a href="#VII"><sup>VII</sup></a>. 
             Ica har tydliga rubriker som gör webbplatsen begriplig och navigationen logisk. 
             Länkarna berättar vart de går och förklarar vilken information användaren kan ta del av genom att klicka vidare.  
             Eftersom bilderna mest är för estetiska syften finns det sällan bildtexter. 
@@ -116,8 +120,9 @@
             När jag ändrade Firefox inställningarna till att det minsta typsnittet max fick vara 44 blev det snabbt tydligt att det inte var något som ICA hade programmerat för. 
             Det blev nästintill omöjligt att läsa. Text raderna flöt ihop i varandra och det som inte fick plats i boxen blev avklippt och förlorad. 
             Länkarna täckte varandra och vissa blev helt oåtkomliga. 
-            Då det inte fanns någon anpassning på webbplatsen själv kan jag tänka mig att detta gör det svårt att använda ICA.se om man har nedsatt syn.
+            Då det inte fanns någon anpassning<a href="#VII"><sup>VII</sup></a> på webbplatsen själv kan jag tänka mig att detta gör det svårt att använda ICA.se om man har nedsatt syn.
         </p>
+        <!--Slut på Tillgänglighet-->
 
         <h2>Responsivitet</h2>
         <p>
@@ -130,21 +135,56 @@
             Jag kan dock se detta vara ett problem om man har nedsatt syn då texten som är mindre på en datorskärm blir ännu lite mindre på en mobil. 
             Allt som allt skulle jag säga att ICA.se är på god väg med sin responsivitet men kombinerat med den lätt bristande tillgängligheten är det svårt att ta del av allt innehåll om man har någon typ av synsvårighet. 
         </p>
+        <!--Slut på Responsivitet-->
 
         <h2>Sammanfattning</h2>
         <p>
             Sammanfattningsvis skulle jag säga att ICA.se är en väl uttänkt webbplats med sammanhängande design och struktur som tillfredsställer den tänkta målgruppens behov. 
             Tillgängligheten är inte helt felfri, men den fungerar tillräckligt bra för att fortfarande vara funktionell även för de med olika grader av svårigheter.
         </p>
-
+        <!--Slut på Sammanfattning och text-->
+        
         <h3>Källhänvisning</h3>
         <ol type="I">
-            <li>T.Sundström <q>Webbplatsens syfte bör vara tydligt</q>
-                <a href="https://www.anvandbart.se/ab/tydligt-syfte/">https://www.anvandbart.se/ab/tydligt-syfte/</a>
-            (Hämtad: Sep. 09, 2025)
+            <li id="I">
+                T.Sundström <q>Webbplatsens syfte bör vara tydligt</q> <i>Anvandbart.se</i>, 2014. &lpar;Online&rpar;
+                Tillgänglig: <a href="https://www.anvandbart.se/ab/tydligt-syfte/">https://www.anvandbart.se/ab/tydligt-syfte/</a>
+            &lpar;Hämtad: Sep. 09, 2025&rpar;
             </li>
-            <li>
-                T.Sundström 
+            <li id="II">
+                T.Sundström <q>Uppgift eller mål</q> <i>Anvandbart.se</i>, 2014. &lpar;Online&rpar;
+                Tillgänglig: <a href="https://www.anvandbart.se/ab/uppgift-mal/">https://www.anvandbart.se/ab/uppgift-mal/</a>
+                 &lpar;Hämtad: Sep. 09, 2025&rpar;.
+            </li>
+            <li id="III">
+                T. Sundström <q>Navigation</q> <i>Anvandbart.se</i>, 2014. &lpar;Online&rpar; 
+                Tillgänglig: <a href="https://www.anvandbart.se/ab/navigation/">https://www.anvandbart.se/ab/navigation/</a>
+                 &lpar;Hämtad: Sep. 09, 2025&rpar;.
+            </li>
+            <li id="IV">
+                T. Sundström <q>Ändra inte sidorna på återfärden,</q> <i>Anvandbart.se</i>, 2014. &lpar;Online&rpar; 
+                Tillgänglig: <a href="https://www.anvandbart.se/ab/samma-aterfard/">https://www.anvandbart.se/ab/samma-aterfard/</a> 
+                &lpar;Hämtad: Sep. 08, 2025&rpar;.
+            </li>
+            <li id="V">
+                T. Sundström <q>Synlig sökväg &lpar;brödsmulor&rpar;</q> <i>Anvandbart.se</i>, 2014. &lpar;Online&rpar; 
+                Tillgänglig: <a href="https://www.anvandbart.se/ab/synlig-sokvag/">https://www.anvandbart.se/ab/synlig-sokvag/</a> 
+                &lpar;Hämtad: Sep. 09, 2025&rpar;.
+            </li>
+            <li id="VI">
+                T. Sundström <q>Använd bilder</q> <i>Anvandbart.se</i>, 2014. &lpar;Online&rpar; 
+                Tillgänglig: <a href="https://www.anvandbart.se/ab/anvand-bilder/">https://www.anvandbart.se/ab/anvand-bilder/</a> 
+                &lpar;Hämtad Sep. 11, 2025&rpar;.
+            </li>
+            <li id="VII">
+                <q>Tillgänglighetsredogörelse</q> <i>Ica.se</i>, 2025. &lpar;Online&rpar; 
+                Tillgänglig: <a href="https://www.ica.se/kundservice/underhall/tillganglighet/">https://www.ica.se/kundservice/underhall/tillganglighet/</a> 
+                &lpar;Hämtad Sep. 11, 2025&rpar;.
+            </li>
+            <li id="VIII">
+                T. Sundström <q>Låt användaren anpassa webbplatsen till sina behov</q> <i>Anvandbart.se</i>, 2014. &lpar;Online&rpar; 
+                Tillgänglig: <a href="https://www.anvandbart.se/ab/behovsanpassa-webbplatsen/">https://www.anvandbart.se/ab/behovsanpassa-webbplatsen/</a> 
+                &lpar;Hämtad Sep. 11, 2025&rpar;.
             </li>
 
         </ol>
