--- a/Pages/intro-page.html
+++ b/Pages/intro-page.html
@@ -47,12 +47,12 @@
                 <td>Hanna Hållinder</td>
             </tr>
             <tr>
-                <th>Ålder</th>
-                <td>26 år</td>
+                <th>Nuvarande Bok</th>
+                <td>Apprentice to the Villain</td>
             </tr>
             <tr>
-                <th>Födelsedag</th>
-                <td>3:e September</td>
+                <th>Nuvarande Spel</th>
+                <td>Stardew Valley</td>
         </table>
         
         <!--Slut på intro-->
