--- a/Pages/intro-page.html
+++ b/Pages/intro-page.html
@@ -41,10 +41,10 @@
         <!--8.table identifierar att det är en tabell. Tr står för table row och td står för table data.-->
         <!--Caption ger tabellen en rubrik och th ger tabell raden sin egna rubrik-->
         <table>
-            <caption>Snabbfakta</caption>
+            <caption>Random Fakta</caption>
             <tr>
-                <th>Namn</th>
-                <td>Hanna Hållinder</td>
+                <th>Favorit Te</th>
+                <td>Rabarber och Vanilj</td>
             </tr>
             <tr>
                 <th>Nuvarande Bok</th>
